Added reindexing endpoint.
